tests/invalid/type/module_registry_invalid_type.pts
import test.invalid.{bad};

function main() : void {
    bad(1);
}
